--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".home.view.activity.MainActivity">
 
     <RelativeLayout
@@ -19,18 +19,25 @@
             app:tabIndicatorHeight="3dp"
             app:tabSelectedTextColor="@color/colorPrimary" />
 
+
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tabs"
-            android:background="@android:color/white" />
-    </RelativeLayout>
+            android:background="@android:color/white">
 
+        </androidx.viewpager.widget.ViewPager>
+
+
+
+    </RelativeLayout>
     <RelativeLayout
+        android:layout_alignParentTop="true"
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" />
+
 
 </RelativeLayout>
